// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Done result, no error 1`] = `
<div
  className="ExtrinsicSubmissionResult"
>
  <div
    className="Alert polkadot"
    style={
      Object {
        "backgroundColor": "#e6007a",
        "color": "white",
      }
    }
  >
    <p>
      Submission successful.
    </p>
  </div>
</div>
`;

exports[`Done result, no error, custom message 1`] = `
<div
  className="ExtrinsicSubmissionResult"
>
  <div
    className="Alert polkadot"
    style={
      Object {
        "backgroundColor": "#e6007a",
        "color": "white",
      }
    }
  >
    Success
  </div>
</div>
`;

exports[`In progress result, error 1`] = `
<div
  className="ExtrinsicSubmissionResult"
>
  <div
    className="Alert danger"
    style={
      Object {
        "backgroundColor": undefined,
        "color": "#e11a25",
      }
    }
  >
    <p>
      Submission failed: error
    </p>
  </div>
</div>
`;

exports[`In progress result, no error 1`] = `
<div
  className="ExtrinsicSubmissionResult"
>
  <div
    className="Alert polkadot"
    style={
      Object {
        "backgroundColor": "#e6007a",
        "color": "white",
      }
    }
  >
    <div
      className="spinner-border"
    />
    <p>
      Current status: Ready
    </p>
  </div>
</div>
`;

exports[`No result, error 1`] = `
<div
  className="ExtrinsicSubmissionResult"
>
  <div
    className="Alert danger"
    style={
      Object {
        "backgroundColor": undefined,
        "color": "#e11a25",
      }
    }
  >
    <p>
      Submission failed: error
    </p>
  </div>
</div>
`;

exports[`No result, error, custom message 1`] = `
<div
  className="ExtrinsicSubmissionResult"
>
  <div
    className="Alert danger"
    style={
      Object {
        "backgroundColor": undefined,
        "color": "#e11a25",
      }
    }
  >
    Error
  </div>
</div>
`;

exports[`No result, no error 1`] = `
<div
  className="ExtrinsicSubmissionResult"
>
  <div
    className="Alert polkadot"
    style={
      Object {
        "backgroundColor": "#e6007a",
        "color": "white",
      }
    }
  >
    <p>
      Submitting...
    </p>
  </div>
</div>
`;
